# 2024-HL-Thermo-CL

./: .gitignore  .gitmodules  Dockerfile  README.md  environment.yml  eval_distributions.ipynb  pyproject.toml  requirements-cloud.txt  requirements-docker.txt  requirements.txt  setup.py
api/: main.py
cloud/: README.md
karman/: __init__.py  dataset.py  nn.py  util.py
models/: karman_model_log_density_valid_loss_0.0018532840203686787_params_5665.torch  karman_model_log_exp_residual_valid_loss_0.0018475983453194525_params_5665.torch
notebooks/: data_analysis.ipynb  data_distributions.ipynb  data_validation.ipynb  database.ipynb  dataset_distribution.ipynb  download_and_prepare.ipynb  inference_forecasting.ipynb  inference_nowcasting.ipynb  inference_simple.ipynb  sensitivity_analysis.ipynb  test_train_base.ipynb  test_wandb.ipynb  tft_density_forecast.ipynb  trigger_mechanism_proposal.ipynb
public/: inference_forecast_example.ipynb  inference_nowcast_example.ipynb  inference_simple_colab.ipynb  inference_tft_colab.ipynb
scripts/: demo_samples.json  download_goes_irradiance.py  download_goes_irradiance_yearly.py  download_omniweb.py  download_soho.py  download_sw_indices.py  download_tudelft_thermo.py  extract_sample_data.py  inference_simple.py  inference_simple_tft.py  main.py  merge.py  merge_omni.py  merge_sw_and_satellites.py  nrlmsise00_general.py  process_goes_allyears.py  process_goes_data.py  process_omniweb.py  process_soho_data.py  process_sw_proxy_data.py  process_tudelft_thermo.py  run_nrlmsise00.py  run_nrlmsise00_time_series.py  (+2 more)
(+97 files in other folders)
